[project]
name = "stellar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "click>=3.1",
    "humanize>=0.5.1",
    "psutil>=2.1.1",
    "pyyaml>=3.11",
    "schema>=0.3.1",
    "sqlalchemy-utils>=0.26.13",
    "sqlalchemy>=0.9.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
